<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/left_drawer"
    android:layout_width="160dp"
    android:layout_height="match_parent"
    android:layout_gravity="left"
    android:background="#ffffff"
    android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/user_toptitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/menu_my_introduce"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/all_goods"
                android:layout_marginLeft="5dp"
                android:textColor="@color/merchandise_content"
                android:textSize="18sp" />
        </LinearLayout>
        
         <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:background="#e5e5e5" />

        <LinearLayout
            android:id="@+id/menu_my_follow"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/automobile"
                android:textColor="@color/merchandise_content"
                android:layout_marginLeft="5dp"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="145dp"
            android:layout_height="0.5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:background="#e5e5e5" />

        <LinearLayout
            android:id="@+id/menu_my_question"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/Gold_jewelry"
                android:textColor="@color/merchandise_content"
                android:layout_marginLeft="5dp"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:id="@+id/my_question_devider"
            android:layout_width="145dp"
            android:layout_height="0.5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:background="#e5e5e5" />

        <LinearLayout
            android:id="@+id/menu_my_answer"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/Brand_watch"
                android:textColor="@color/merchandise_content"
                android:layout_marginLeft="5dp"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="145dp"
            android:layout_height="0.5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:background="#e5e5e5" />

        <LinearLayout
            android:id="@+id/menu_my_msg"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/Digital_video"
                android:textColor="@color/merchandise_content"
                android:layout_marginLeft="5dp"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="145dp"
            android:layout_height="0.5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:background="#e5e5e5" />

        <LinearLayout
            android:id="@+id/menu_koubei"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/Computer_office"
                android:textColor="@color/merchandise_content"
                android:layout_marginLeft="5dp"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="145dp"
            android:layout_height="0.5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:background="#e5e5e5" />

        <LinearLayout
            android:id="@+id/menu_setting"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/other"
                android:textColor="@color/merchandise_content"
                android:layout_marginLeft="5dp"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="145dp"
            android:layout_height="0.5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:background="#e5e5e5" />
    </LinearLayout>
    
    <View 
        android:layout_width="10dp"
        android:layout_height="match_parent"
        android:background="@color/cart_bg"/>

</LinearLayout>